tests/invalid/user_field_access_decl_override.err_exp
user_field_access_decl_override.m:020: In `f1'(in) = out:
user_field_access_decl_override.m:020:   warning: determinism declaration could
user_field_access_decl_override.m:020:   be tighter.
user_field_access_decl_override.m:020:   Declared [38;5;40m`semidet',[39;49m inferred [38;5;203m`det'.[39;49m
user_field_access_decl_override.m:021: In `f1 :='(in, in) = out:
user_field_access_decl_override.m:021:   warning: determinism declaration could
user_field_access_decl_override.m:021:   be tighter.
user_field_access_decl_override.m:021:   Declared [38;5;40m`semidet',[39;49m inferred [38;5;203m`det'.[39;49m
user_field_access_decl_override.m:023: In `get_foo_f1'(in) = out:
user_field_access_decl_override.m:023:   error: determinism declaration not
user_field_access_decl_override.m:023:   satisfied.
user_field_access_decl_override.m:023:   Declared [38;5;40m`det',[39;49m inferred [38;5;203m`semidet'.[39;49m
user_field_access_decl_override.m:023:   The reasons for the difference are the
user_field_access_decl_override.m:023:   following.
user_field_access_decl_override.m:028:   In unification of `X' and `f1(Foo)':
user_field_access_decl_override.m:028:   [38;5;226mCall to[39;49m
user_field_access_decl_override.m:028:   [38;5;226m`user_field_access_decl_override.f1'(in)[39;49m
user_field_access_decl_override.m:028:   [38;5;226m= out can fail.[39;49m
user_field_access_decl_override.m:030: In `set_foo_f1'(in, in, out):
user_field_access_decl_override.m:030:   error: determinism declaration not
user_field_access_decl_override.m:030:   satisfied.
user_field_access_decl_override.m:030:   Declared [38;5;40m`det',[39;49m inferred [38;5;203m`semidet'.[39;49m
user_field_access_decl_override.m:030:   The reasons for the difference are the
user_field_access_decl_override.m:030:   following.
user_field_access_decl_override.m:035:   In unification of `STATE_VARIABLE_Foo'
user_field_access_decl_override.m:035:   and `'f1 :='(STATE_VARIABLE_Foo_0,
user_field_access_decl_override.m:035:   X)':
user_field_access_decl_override.m:035:   [38;5;226mCall to[39;49m
user_field_access_decl_override.m:035:   [38;5;226m`user_field_access_decl_override.f1[39;49m
user_field_access_decl_override.m:035:   [38;5;226m:='(in, in) = out can fail.[39;49m
